crates/tsuno-driver/tests/fixtures/snapshots/pass/supports_generic_recursive_spec_enum.rs
/*@
enum List<T> {
    Nil,
    Cons(T, List<T>),
}

fn singleton(x: i32) -> List<i32> {
    List::Cons(x, List::Nil)
}
*/

fn main() {}
