crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_pure_fn_calling_later_definition.rs
/*@
fn first(x: i32) -> i32 {
    second(x)
}

fn second(x: i32) -> i32 {
    x
}
*/

fn main() {}
